# cdc-tauri-starterkit

./: .gitignore  FEATURES.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  usage_clipboard-manager.MD  usage_deep-link.MD
.github/workflows/: build.yml  release.yml
scripts/: generate-icons.js  sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  deep_link.rs  features.rs  lib.rs  main.rs  menu.rs  notifications.rs  tray.rs
src-tauri/src/features/clipboard/: commands.rs  mod.rs  types.rs  utils.rs
src-tauri/src/features/deep_links/: commands.rs  mod.rs  types.rs  utils.rs
src-tauri/src/features/notifications/: commands.rs  mod.rs  types.rs  utils.rs
src-tauri/src/features/window_manager/: commands.rs  mod.rs  types.rs  utils.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/clipboard-demo/: page.tsx
src/app/deep-link-demo/: page.tsx
src/app/window-demo/: page.tsx
src/app/window-manager-demo/: page.tsx
src/components/: NotificationDemo.tsx  TauriDemo.tsx  WindowManagerDemo.tsx
src/lib/: tauri.ts  window-manager.ts
