[package]
name = "cdc-tauri-starterkit"
version = "0.1.0"
description = "A Tauri App with Next.js 15+, TypeScript, and Tailwind CSS"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = { version = "2.0", optional = true }
tauri-plugin-deep-link = { version = "2.0", optional = true }
tauri-plugin-clipboard-manager = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
chrono = { version = "0.4", features = ["serde"], optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Optional feature flags for modular functionality
default = []
notifications = ["dep:tauri-plugin-notification"]
deep-links = ["dep:tauri-plugin-deep-link"]
clipboard = ["dep:tauri-plugin-clipboard-manager", "dep:image", "dep:base64", "dep:chrono"]
system-tray = ["tauri/tray-icon"]
